Minor abstract reorganisation

--- a/2016/06-07-PDESoft-firedrake.tex
+++ b/2016/06-07-PDESoft-firedrake.tex
@@ -93,6 +93,28 @@ London
   abstractions}
 
 \begin{document}
+% \begin{abstract}
+%   The complexity inherent in the application of advanced numerics on
+%   modern hardware to coupled physical systems presents a critical
+%   barrier to simulation development.  To overcome this, we must create
+%   simulation software which embodies the abstraction and composability
+%   of the underlying mathematics.  In this way, a system is created in
+%   which mathematicians, computer scientists, and application specialists
+%   can each deploy their own expertise, benefiting from the expertise of
+%   the others.  Critically, this approach minimises the extent to which
+%   individuals must become polymaths to share in these advances.
+
+%   In this talk I will present Firedrake and PyOP2, a composition of new
+%   and existing abstractions which creates a particularly complete
+%   separation of concerns.  A key observation is that by careful
+%   abstraction design, we are able to teach computers how to reason about
+%   the mathematical structure of the problem, rather than working out
+%   everything on paper.  This enables the creation of high performance,
+%   sophisticated finite element models from a very high level
+%   mathematical specification and has enabled advances in computer
+%   science and numerics, while also facilitating the creation of
+%   simulation systems for a variety of applications.
+% \end{abstract}
 \bgroup
 \setbeamertemplate{background}{}
 \begin{frame}[standout]
